# perf-focus

./: .gitignore  Cargo.toml  README.md
src/: flat.rs  main.rs  rustc_query.rs  util.rs
src/graph/: mod.rs
src/histogram/: mod.rs
src/leaf/: mod.rs
src/matcher/: mod.rs  parser.rs  test.rs
src/trace/: mod.rs  test.rs
src/tree/: mod.rs
