[package]
name = "perf-focus"
version = "1.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/nikomatsakis/perf-focus"
description = "A post-processing tool for analyzing perf data"
readme = "README.md"

[dependencies]
regex = "0.1"
rusty-peg = "0"
petgraph = "0.4"
itertools = "0.7.6"
prettytable-rs = "0.6.7"